# systemd-mcp

./: Cargo.toml  README.md
src/: main.rs
