[package]
name = "systemd-mcp"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1-or-later"

[dependencies]
anyhow = "1"
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zlink = { version = "0.4", default-features = false, features = ["tokio", "proxy", "idl-parse", "tracing"] }
